--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -51,6 +51,10 @@
       text-align: center;
     }
 
+    .icons {
+      text-align: center;
+    }
+
     &#about {
     grid-template-areas:
     'chevron-up chevron-up'
@@ -95,6 +99,7 @@
     .icons {
       text-align: center;
     }
+
     &#about {
       grid-template-areas:
       'chevron-up'
